<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="sitioTuristico"
            type="com.example.appsitiosturisticos.SitioTuristico" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fondo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:context=".ActivityDetalle">

        <TextView
            android:id="@+id/txt_tituloInformacion"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:scaleType="centerCrop"
            android:text="@string/txt_tituloInformacion"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_Ubicacion" />

        <TextView
            android:id="@+id/txt_Valoracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:text="@string/txt_Valoracion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_Informacion" />

        <TextView
            android:id="@+id/txt_Informacion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/txt_Informacion"
            android:padding="8dp"
            android:text="@{sitioTuristico.informacion}"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_tituloInformacion" />

        <ImageView
            android:id="@+id/img_perfil"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/txt_nombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/txt_nombre"
            android:padding="16sp"
            android:text="@{sitioTuristico.nombre}"
            android:textAlignment="center"
            android:textColor="@color/azul"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_perfil" />

        <TextView
            android:id="@+id/txt_tituloUbicacion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/txt_tituloUbicacion"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_nombre" />

        <TextView
            android:id="@+id/txt_Ubicacion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/txt_Ubicacion"
            android:padding="8dp"
            android:text="@{sitioTuristico.ubicacion}"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_tituloUbicacion" />

        <RatingBar
            android:id="@+id/valoracion"
            android:rating="@{sitioTuristico.valoracion}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:isIndicator="true"
            android:progressTint="@color/amarillo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_Valoracion" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>